# engram

./: .gitignore  BOUNDARIES.md  README.md  ROADMAP.md  design system.html  pyproject.toml
.openclaw/: workspace-state.json
.openclaw-logs/: agent.jsonl
benchmark/: balance-fix-results.md  run_benchmarks.py
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  BENCHMARKS.md  DIRECTION.md  EXECUTION_PLAN.md  SYNTHESIS.md  baseline-2026-02-23.md  experiment-tracking.md  linkedin-validation.md  turn-level-dashboard.html
docs/case-studies/: CASE_STUDY_2_final.md  artifact-analysis-feb2026.md  headless-agent-spawn-2026-02-26.md  monra-balance-fix-2026-02-20.html  monra-balance-fix-2026-02-20.md  monra-signup-fix-2026-03-03-tool-calls.md  (+7 more)
docs/prompts/: plan.md  (+5 more)
engram/: __init__.py  ab_brief.py  ab_results.py  artifact_trail.py  brief.py  cli.py  correction_brief.py  export.py  install_mcp.py  mcp_server.py  monitor.py  query_rewriter.py  sessions.py  stats.py
scripts/: ab-compare.py  batch_embed_openai.py  migrate_loopwright.py  verify_memgraph.py
tests/: conftest.py  test_ab_support.py  test_artifact_trail.py  test_auto_sync.py  test_base.py  test_benchmark_artifacts.py  test_benchmark_recovery.py  test_benchmark_search.py  test_benchmark_tokens.py  test_brief.py  test_claude_code_adapter.py  test_codex_adapter.py  test_cursor_adapter.py  test_experiment_004.py  test_graph.py  test_hooks.py  test_install_mcp.py  test_loopwright.py  test_loopwright_post_commit_hook.py  test_mcp_server.py  test_query_rewriter.py  test_subagent_indexing.py  test_v020.py  test_vector_search.py
(+81 files in other folders)
