[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engram"
version = "0.4.0"
description = "Knowledge base for AI coding sessions — index, search, brief, and benchmark your agent workflows"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
engram = "engram.cli:main"
